--- a/public/frontend/infixlmstheme/css/frontend_style.css
+++ b/public/frontend/infixlmstheme/css/frontend_style.css
@@ -4849,7 +4849,7 @@ input[type="number"] {
 @media (max-width: 767.98px) {
     .lms_tab_content .instractor_details_wrapper .instractor_details_inner {
         grid-template-columns: auto auto;
-        grid-gap: 30px;
+        grid-gap: 25px !important;
         margin-bottom: 30px;
     }
 
@@ -4909,9 +4909,6 @@ input[type="number"] {
     }
 }
 
-.course_review_wrapper .details_title {
-    /* margin-bottom: 28px; */
-}
 
 .course_review_wrapper .details_title h4 {
     margin-bottom: 3px;
@@ -4931,10 +4928,6 @@ input[type="number"] {
     }
 }
 
-/* .course_review_wrapper .course_feedback .course_feedback_left {
-    padding-right: 55px;
-    margin-bottom: 30px;
-} */
 
 .course_review_wrapper .course_feedback .course_feedback_left h2 {
     font-size: 60px;
@@ -5027,18 +5020,8 @@ input[type="number"] {
 
 .course_review_wrapper .course_cutomer_reviews {
     border-top: 1px solid #e9e7f7;
-    /* padding-top: 56px;
-    margin-top: 36px; */
 }
 
-/* .course_review_wrapper .course_cutomer_reviews .details_title {
-    margin-bottom: 55px;
-}
-@media (max-width: 767.98px) {
-    .course_review_wrapper .course_cutomer_reviews .details_title {
-        margin-bottom: 30px;
-    }
-} */
 .course_review_wrapper .course_cutomer_reviews .single_reviews {
     display: flex;
     border-bottom: 1px solid #e9e7f7;
@@ -9095,9 +9078,9 @@ input[type="number"] {
     z-index: 1;
 }
 
-.breadcrumb_area .breadcam_wrap {
+/* .breadcrumb_area .breadcam_wrap {
     max-width: 620px;
-}
+} */
 
 .breadcrumb_area .breadcam_wrap.width_730px {
     max-width: 730px;
@@ -10443,7 +10426,7 @@ input[type="number"] {
 .course_fullview_wrapper .course_quiz_left_wrapper {
     position: fixed;
     width: calc((100% - 340px));
-    height: -webkit-fill-available;
+    height: calc((100vh - 125px));
 }
 
 .course_fullview_wrapper .video_iframe {
@@ -15886,6 +15869,90 @@ border-radius: 10px;
     overflow: auto;
     scrollbar-width: none;
 }
+
+/* teach and application slider */  
+ .fw-medium {
+        font-weight: 500;
+    }
+
+    .carrot-orange-clr {
+        color: var(--system_primery_color);
+    }
+
+    .slider-bg {
+        background-color: #b2dfcc;
+    }
+
+    .brdr-btm-of-txt {
+        border-bottom: 1px solid#9fcdb9;
+    }
+
+    .padding-top-of-first-part {
+        padding-top: 80px;
+    }
+
+    .side-bar-for-process-section {
+        height: auto;
+        min-width: 10px;
+        background-color: #996699;
+        position: relative;
+        border-radius: 10px 10px 0 0;
+    }
+
+    .dot-point-side-bar-of-process-section {
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: 50%;
+        min-width: 30px;
+        height: 30px;
+        background-color: #996699;
+    }
+
+    .top-of-2 {
+        top: 84px;
+    }
+
+    .top-1 {
+        top: -1px;
+    }
+
+    .margin-left-minus-10 {
+        margin-left: -10px;
+    }
+
+    .inner-end-point-of-bar {
+        height: 18px;
+        width: 18px;
+        border-radius: 50%;
+        background-color: var(--system_primery_color);
+    }
+
+    .inner-white-point-of-bar {
+        height: 18px;
+        width: 18px;
+        border-radius: 50%;
+        background-color: white;
+    }
+
+    .padding-btm-last-part {
+        padding-bottom: 30px;
+    }
+
+    .mr_our_process {
+        margin-right: 50px;
+    }
+
+    .ml_our_process {
+        margin-left: 50px;
+    }
+    .small_gap img {
+        height: 35px;
+        width: 35px;
+    }
 @media only screen and (max-width: 377px) {
     .course__play_warp .course__play_list {
         min-height: calc(100vh - 300px) !important;
@@ -15918,6 +15985,43 @@ border-radius: 10px;
     }
     .image_thumb {
         height: 170px !important;
+    }
+    .mr_our_process {
+        margin-right: 0px !important;
+        margin-left: 10px !important;
+    }
+
+    .ml_our_process {
+        margin-left: 10px !important;
+    }
+    .small_gap {
+        gap: .2rem;
+    }
+    .carrot-orange-clr,
+    .brdr-btm-of-txt {
+        display: flex;
+        justify-content: center;
+        margin: auto;
+        text-align: center;
+    }
+
+    .inner-white-point-of-bar {
+        height: 14px !important;
+        width: 14px !important;
+    }
+
+    .dot-point-side-bar-of-process-section {
+        min-width: 24px !important;
+        height: 24px !important;
+    }
+
+    .inner-end-point-of-bar {
+        height: 14px !important;
+        width: 14px !important;
+    }
+
+    .gap-5 {
+        gap: .4rem !important;
     }
 }
 
@@ -15953,6 +16057,30 @@ border-radius: 10px;
 }
 
 @media only screen and (max-width: 767.5px) {
+    .small_gap {
+        position: relative;
+    }
+
+    .small_gap img {
+        width: 20px !important;
+        height: 20px !important;
+        position: absolute;
+        top: -28px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    .ml_our_process {
+        margin-left: 50px;
+    }
+
+    .mr_our_process {
+        margin-right: 50px;
+    }
+
+    .brdr-btm-of-txt {
+        font-size: 16px;
+        text-align: center !important;
+    }
     .about_page-description{
         height: auto !important;
     }
@@ -16622,6 +16750,14 @@ border-radius: 10px;
 }
 
 @media (min-width: 768px) and (max-width: 1024.95px) {
+    .course_fullview_wrapper .course_quiz_left_wrapper {
+        height: calc(100vh - 150px) !important;
+    }
+    .lms_tab_content .instractor_details_wrapper .instractor_details_inner {
+        grid-gap: 25px !important;
+        grid-template-columns: auto auto !important;
+
+    }
     .about_page-description {
         height: 625px !important;
     }
