--- a/public/frontend/infixlmstheme/css/frontend_style.css
+++ b/public/frontend/infixlmstheme/css/frontend_style.css
@@ -828,8 +828,10 @@ label {
 
 .ck-content ul,
 .ck-content ol,
+.ck-content li,
 .ckdtext ul,
-.ckdtext ol
+.ckdtext ol,
+.ckdtext li
 {
     list-style: revert !important;
     padding: revert !important;
