--- a/public/frontend/infixlmstheme/css/frontend_style.css
+++ b/public/frontend/infixlmstheme/css/frontend_style.css
@@ -16395,6 +16395,7 @@ border-radius: 10px;
 
     .theme_line_btn {
         padding: 4px 10px !important;
+        font-size: 11px !important;
     }
 
     .section__title3 h3 {
@@ -16958,6 +16959,10 @@ border-radius: 10px;
         margin: 0 -81px 30px 100px !important;
     }
     .theme_btn {
+        font-size: 14px !important;
+        padding: 0.3rem .6rem !important;
+    }
+    .theme_line_btn{
         font-size: 14px !important;
         padding: 0.3rem .6rem !important;
     }
